@startuml Diagramme de Classes - FLOTTE
!theme plain
skinparam classAttributeIconSize 0
skinparam shadowing false

skinparam classBackgroundColor #faf8f5
skinparam classBorderColor #8b7659
skinparam classFontColor #3d3329
skinparam packageBackgroundColor #e8dfd4
skinparam packageBorderColor #a8957a
skinparam packageFontColor #534636
skinparam noteBackgroundColor #f2ede6
skinparam noteBorderColor #c4b39e
skinparam noteFontColor #3d3329

' ============================================
' DIAGRAMME DE CLASSES - SYSTÈME FLOTTE (aligné sur models.py)
' ============================================

package "Paramétrage" {
    class Marque {
        - id : Integer
        - nom : String {unique}
        - archive : Boolean
        - created_at : DateTime
        --
        + __str__() : String
    }
    class Modele {
        - id : Integer
        - marque_id : FK
        - nom : String
        - version : String
        - annee_min : Integer
        - annee_max : Integer
        - archive : Boolean
        - created_at : DateTime
        --
        + __str__() : String
    }
    class TypeCarburant {
        - id : Integer
        - libelle : String {unique}
        - created_at : DateTime
        --
        + __str__() : String
    }
    class TypeTransmission {
        - id : Integer
        - libelle : String {unique}
        - created_at : DateTime
        --
        + __str__() : String
    }
    class TypeVehicule {
        - id : Integer
        - libelle : String {unique}
        - created_at : DateTime
        --
        + __str__() : String
    }
    Marque "1" -- "0..*" Modele : contient
}

package "Gestion Flotte" {
    class Vehicule {
        - id : Integer
        - numero_chassis : String {unique}
        - marque_id : FK
        - modele_id : FK
        - annee : Integer
        - type_vehicule_id : FK
        - type_carburant_id : FK
        - type_transmission_id : FK
        - couleur_exterieure : String
        - couleur_interieure : String
        - date_entree_parc : Date
        - km_entree : Integer
        - kilometrage_actuel : Integer
        - prix_achat : Decimal
        - origine_pays : String
        - etat_entree : String
        - statut : StatutVehicule
        - numero_immatriculation : String
        - date_premiere_immat : Date
        - consommation_moyenne : Decimal
        - rejet_co2 : Integer
        - puissance_fiscale : Integer
        - km_prochaine_vidange : Integer
        - created_at : DateTime
        - updated_at : DateTime
        --
        + libelle_court : String {property}
        + __str__() : String
    }

    class ImportDemarche {
        - id : Integer
        - vehicule_id : FK
        - etape : String
        - date_etape : Date
        - statut_etape : String
        - remarque : Text
        - created_at : DateTime
        --
        + __str__() : String
    }

    class DocumentVehicule {
        - id : Integer
        - vehicule_id : FK
        - type_document : String
        - numero : String
        - date_emission : Date
        - date_echeance : Date
        - disponible : Boolean
        - remarque : Text
        - created_at : DateTime
        --
        + __str__() : String
    }

    class Depense {
        - id : Integer
        - vehicule_id : FK
        - type_depense : TypeDepense
        - libelle : String
        - phase : String
        - montant : Decimal
        - date_depense : Date
        - remarque : Text
        - created_at : DateTime
        --
        + __str__() : String
    }

    class Reparation {
        - id : Integer
        - vehicule_id : FK
        - date_reparation : Date
        - kilometrage : Integer
        - type_rep : String
        - description : Text
        - cout : Decimal
        - prestataire : String
        - a_faire : Boolean
        - created_at : DateTime
        --
        + __str__() : String
    }

    class Location {
        - id : Integer
        - vehicule_id : FK
        - locataire : String
        - type_location : String
        - date_debut : Date
        - date_fin : Date
        - loyer_mensuel : Decimal
        - km_inclus_mois : Integer
        - prix_km_supplementaire : Decimal
        - date_expiration_ct : Date
        - date_expiration_assurance : Date
        - km_prochaine_vidange : Integer
        - remarques : Text
        - statut : StatutLocation
        - created_at : DateTime
        - updated_at : DateTime
        --
        + __str__() : String
    }

    class Vente {
        - id : Integer
        - vehicule_id : FK
        - date_vente : Date
        - acquereur : String
        - prix_vente : Decimal
        - km_vente : Integer
        - garantie_duree : String
        - etat_livraison : String
        - created_at : DateTime
        --
        + __str__() : String
    }

    class Facture {
        - id : Integer
        - vehicule_id : FK
        - numero : String
        - fournisseur : String
        - date_facture : Date
        - montant : Decimal
        - type_facture : String
        - remarque : Text
        - created_at : DateTime
        --
        + __str__() : String
    }

    class Maintenance {
        - id : Integer
        - vehicule_id : FK
        - type_maintenance : TypeMaintenance
        - date_prevue : Date
        - kilometrage_prevu : Integer
        - date_effectuee : Date
        - kilometrage_effectue : Integer
        - cout : Decimal
        - prestataire : String
        - statut : StatutMaintenance
        - remarque : Text
        - created_at : DateTime
        --
        + __str__() : String
    }

    class ReleveCarburant {
        - id : Integer
        - vehicule_id : FK
        - date_releve : Date
        - kilometrage : Integer
        - litres : Decimal
        - montant_fcfa : Decimal
        - prix_litre : Decimal
        - lieu : String
        - remarque : Text
        - created_at : DateTime
        --
        + __str__() : String
    }

    class Conducteur {
        - id : Integer
        - user_id : FK (optional)
        - nom : String
        - prenom : String
        - email : String
        - telephone : String
        - permis_numero : String
        - permis_date_expiration : Date
        - actif : Boolean
        - remarque : Text
        - created_at : DateTime
        - updated_at : DateTime
        --
        + __str__() : String
    }

    class RapportJournalier {
        - id : Integer
        - date_rapport : Date
        - titre : String
        - type_rapport : TypeRapport
        - fichier : FileField
        - remarque : Text
        - created_at : DateTime
        --
        + __str__() : String
    }
}

package "Gestion Utilisateurs" {
    class User {
        - id : Integer
        - username : String
        - password : String
        - is_staff : Boolean
        - is_superuser : Boolean
        - email : String
        --
        + __str__() : String
    }
    class ProfilUtilisateur {
        - id : Integer
        - user_id : FK {unique}
        - role : Role
        --
        + __str__() : String
    }
    User "1" -- "0..1" ProfilUtilisateur : a
    User "0..1" -- "0..1" Conducteur : conducteur_flotte
}

' Relations
Vehicule "1" -- "0..*" ImportDemarche : import_demarches
Vehicule "1" -- "0..*" DocumentVehicule : documents
Vehicule "1" -- "0..*" Depense : depenses
Vehicule "1" -- "0..*" Reparation : reparations
Vehicule "1" -- "0..*" Location : locations
Vehicule "1" -- "0..*" Vente : ventes
Vehicule "1" -- "0..*" Facture : factures
Vehicule "1" -- "0..*" Maintenance : maintenances
Vehicule "1" -- "0..*" ReleveCarburant : releves_carburant

Marque "1" -- "0..*" Vehicule : vehicules
Modele "1" -- "0..*" Vehicule : vehicules
TypeCarburant "1" -- "0..*" Vehicule : vehicules
TypeTransmission "1" -- "0..*" Vehicule : vehicules
TypeVehicule "1" -- "0..*" Vehicule : vehicules

note right of Vehicule
  <b>StatutVehicule:</b>
  - parc (Au parc)
  - import (En cours d'importation)
  - vendu (Vendu)
  
  Identifiant principal :
  numero_chassis (unique)
end note

note right of ProfilUtilisateur
  <b>Role:</b>
  - admin
  - manager (Gestionnaire)
  - user (Utilisateur)
end note

note right of Maintenance
  <b>TypeMaintenance:</b>
  vidange, courroie, pneus,
  filtres, plaquettes, batterie, autre
  
  <b>StatutMaintenance:</b>
  a_faire, en_cours, effectue
end note

note right of Location
  <b>StatutLocation:</b>
  en_cours, a_venir, termine
end note

note right of Depense
  <b>TypeDepense:</b>
  entretien, reparation,
  carburant, assurance, autre
end note

@enduml
